    &#8226; YouTube thumbnails<br/>
    &#8226; LOTS of speed optimizations for main timeline<br/>
    &#8226; Option to not show the inline pictures<br/>
    &#8226; Much better support for hashtags, links, and user entities in tweets<br/>
    &#8226; Option to turn off and on emoji keyboard from settings. Check if it is installed too<br/>
    &#8226; Major widget changes<br/>
    &#8226; Widget and image caching fixes<br/>
    &#8226; Inline Instagram pictures<br/><br/>
<br/>

Version 0.60:<br/><br/>
    &#8226; Optimized caching for less data usage and more speed<br/>
    &#8226; Tons of cleanup on the images<br/>
    &#8226; Re-made the compose, profiles, and tweet activities. Look much cleaner now.<br/>
    &#8226; Draft system for unsent tweets<br/>
    &#8226; Emojis added. You have to have our sliding emoji keyboard trial app. Link in settings.<br/>
    &#8226; Fixes for the highlighting of hashtags, users, and links<br/>
    &#8226; New widget<br/>
    &#8226; DashClock Extension<br/>
    &#8226; Style changes to profiles<br/>
    &#8226; Can now search for users by their username as well<br/>
    &#8226; Attach locations to new tweets<br/><br/>
<br/>

Version 0.50:<br/><br/>
    &#8226; Open profiles, hashtags, and websites that are highlighted in tweets<br/>
    &#8226; Can now search for users when composing a new tweet. It will sync your friends when you login and add them if you follow someone<br/>
    &#8226; Manually sync friends option<br/>
    &#8226; Only auto-refresh on wifi option<br/>
    &#8226; Cool landscape mode<br/>
    &#8226; Overhaul of unread tweets and marking them as read<br/>
    &#8226; Attach images from the camera to send<br/>
    &#8226; Notifications can now wake the screen<br/>
    &#8226; Night Mode Option<br/>
    &#8226; 24-Hour Timestamp Option<br/>
    &#8226; Style changes<br/><br/>
<br/>

Version 0.40:<br/><br/>
    &#8226; Support for a second account<br/>
    &#8226; Awesome kitkat styling stuff<br/>